--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ body {
     color: var(--accent-color);
 }
 
-/* all style */
+/* global style */
 
 
 .nav-link.current {
@@ -55,6 +55,11 @@ body {
     text-decoration: none;
 }
 
+.list {
+    list-style: none;
+}
+
+
 /* header */
 
 /* logo */
@@ -64,7 +69,6 @@ body {
     font-family: Raleway, sans-serif;
     font-size: 26px;
     font-weight: 700;
-    text-decoration: none;
 }
 
 .accent-logo {
@@ -74,20 +78,18 @@ body {
 /* nav */
 .site-nav,
 .contacts-nav {
-    list-style: none;
+
 }
 .nav-link {
     font-weight: 500;
     letter-spacing: 0.02em;
     color: var(--title-text-color);
-    text-decoration: none;
 }
 
 .contacts-link {
     font-weight: 500;
     letter-spacing: 0.02em;
     color: var(--primary-text-color);
-    text-decoration: none;
 }
 
 
@@ -208,7 +210,7 @@ color: var(--title-text-color);
 /* projects */
 
 .projects {
-    list-style: none;
+    
 }
 
 .title-portfolio {
@@ -233,14 +235,13 @@ color: var(--title-text-color);
     font-style: normal;
 }
 .contacts-menu {
-    list-style: none;
+    
 }
 .contacts-link-map,
 .contacts-link-f {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
-    text-decoration: none;
 }
 .contacts-link-map{
     color: var(--basic-white-color);
