--- a/css/styles.css
+++ b/css/styles.css
@@ -174,27 +174,31 @@ body {
 
 
 .title-second {
-font-weight: 700;
-font-size: 36px;
-line-height: 1.17;
-color: var(--title-text-color);
+    margin-top: 0px;
+    margin-bottom: 50px;
+    text-align: center;
+
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    color: var(--title-text-color);
 }
 
 
 /* benefits */
-
-.benefits-list {
-    display: flex;
+.benefits-content {
     width: 1200px;
-    align-items: flex-start;
     padding: 94px 15px;
     margin-right: auto;
     margin-left: auto;
 
     outline: 1px solid tomato;
 }
-.benefits-list: {
-    
+
+.benefits-list {
+    display: flex;
+    align-items: flex-start;
+
 }
 
 .benefits-item {
@@ -219,15 +223,36 @@ color: var(--title-text-color);
 }
 
 /* team */
-
-.team {
-    font-size: 16px;
-    line-height: 1.18;
+.team-section {
+    width: 1200px;
+    padding: 94px 15px;
+    margin-right: auto;
+    margin-left: auto;
 }
+
 .team-title {
+    margin-top: 0;
+    margin-bottom: 10px;
     font-weight: 500;
     color: var(--title-text-color);
 }
+
+.team-list {
+    display: flex;
+
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+}
+.team-item {
+    width: 270px;
+    margin-right: 30px;
+}
+.team-item:nth-child(4n) {
+    margin-right: 0px;
+}
+
+
 
 
 /* ----- portfolio ----- */
