--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,10 @@ body {
     margin: 0;
     list-style: none;
 }
+img {
+    display: block;
+    max-width: 100%;
+}
 
 
 /* ----- header ----- */
@@ -133,20 +137,22 @@ body {
 /* content main */
 
 .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
     background-color: var(--basic-dark-color);
     text-align: center;
 }
 
 .hero-title {
-    margin-top: 0px;
-    margin-bottom: 30px;
+    width: 680px;
+    margin: 0 auto 30px;
 
+    color: var(--basic-white-color);
     font-weight: 900;
     font-size: 44px;
     line-height: 1.5;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    color: var(--basic-white-color);
 }
 
 .hero-button {
@@ -174,7 +180,7 @@ body {
 
 
 .title-second {
-    margin-top: 0px;
+    margin-top: 0;
     margin-bottom: 50px;
     text-align: center;
 
@@ -186,82 +192,146 @@ body {
 
 
 /* benefits */
+
+.benefits {
+    padding-top: 94px;
+    padding-bottom: 47px;
+}
+
 .benefits-content {
     width: 1200px;
-    padding: 94px 15px;
+    padding-right: 15px;
+    padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
-
-    outline: 1px solid tomato;
+    /* outline: 1px solid tomato; */
 }
 
 .benefits-list {
     display: flex;
     align-items: flex-start;
+    margin-left: -30px;
 
 }
 
 .benefits-item {
-    outline: 1px solid tomato;
-}
-
-.benefits-item:not(:last-child) {
-    margin-right: 30px;
-
+    flex-basis: calc(100% * 4 - 30px);
+    margin-left: 30px;
+    /* outline: 1px solid tomato; */
 }
 
 .benefits-title {
-    margin-top: 0px;
+    margin-top: 0;
     margin-bottom: 10px;
     font-weight: 700;
     text-transform: uppercase;
     color: var(--title-text-color);
 }
 .benefits-text {
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
+
+/* doing */
+
+.doing {
+    padding-top: 47px;
+    padding-bottom: 94px;
+}
+
+.doing-content {
+    width: 1200px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin: 0 auto;
+}
+
+.doing-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-bottom: -30px;
+}
+
+.doing-item {
+    flex-basis: calc(100% / 3 - 30px);
+    margin-left: 30px;
+    margin-bottom: 30px;
+}
+
+
 /* team */
+
+.team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+    background-color: #F5F4FA;
+}
+
 .team-section {
     width: 1200px;
-    padding: 94px 15px;
+    padding: 0 15px;
     margin-right: auto;
     margin-left: auto;
+}
+
+.team-list {
+    display: flex;
+    flex-wrap: wrap;
+
+    font-size: 16px;
+    line-height: 1.18;
+}
+
+.team-item {
+    flex-basis: 270px;
+    padding-bottom: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+
+    background-color: #fff;
+    border-radius: 0 0 4px 4px;
+}
+.team-item:nth-child(4n) {
+    margin-right: 0px;
+}
+.team-item:nth-last-child(-n + 4) {
+    margin-bottom: 0;
+}
+
+.team-text-conteiner {
+    padding-top: 30px;
+    text-align: center;
 }
 
 .team-title {
     margin-top: 0;
     margin-bottom: 10px;
+
     font-weight: 500;
     color: var(--title-text-color);
 }
+.team-text {
+    margin-top: 0;
+    margin-bottom: 0;
 
-.team-list {
-    display: flex;
-
-    font-size: 16px;
-    line-height: 1.18;
-    text-align: center;
 }
-.team-item {
-    width: 270px;
-    margin-right: 30px;
-}
-.team-item:nth-child(4n) {
-    margin-right: 0px;
-}
-
-
 
 
 /* ----- portfolio ----- */
+
+.portfolio {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 
 .portfolio-objects {
     width: 1200px;
     margin-right: auto;
     margin-left: auto;
-    padding: 94px 15px;
+    padding-left:  15px;
+    padding-right: 15px;
 }
 
 
@@ -323,7 +393,7 @@ body {
 }
 
 .title-portfolio {
-    margin-top: 0px;
+    margin-top: 0;
     margin-bottom: 4px;
     margin-left: 24px;
 
@@ -335,7 +405,7 @@ body {
 }
 
 .text-portfolio {
-    margin-top: 0px;
+    margin-top: 0;
     margin-bottom: 20px;
     margin-left: 24px;
 
@@ -348,13 +418,13 @@ body {
 /* ----- footer style ----- */
 
 .page-footer{
+    padding-top: 60px;
+    padding-bottom: 60px;
     background-color: var(--basic-dark-color);
 }
 
 .footer-menu {
     width: 1200px;
-    padding-top: 60px;
-    padding-bottom: 60px;
     margin-right: auto;
     margin-left: auto;
     padding-right: 15px;
@@ -363,7 +433,7 @@ body {
 
 .footer-menu .logo {
     display: inline-block;
-    margin-right: 0px;
+    margin-right: 0;
     margin-bottom: 20px;
 }
 
